[gd_scene load_steps=20 format=3 uid="uid://dx27klpp0nc4x"]

[ext_resource type="Script" path="res://Script/Perfabs/NonPlayableCharacter/Enemy.gd" id="1_jkjmt"]
[ext_resource type="Texture2D" uid="uid://bcvid2hgflnb" path="res://Assets/Texture/Characters/purple_character.png" id="1_lm6s8"]
[ext_resource type="Script" path="res://addons/FlowerBuff/Script/FlowerBuffManager.gd" id="2_jei58"]
[ext_resource type="Script" path="res://Script/Resources/CharacterData.gd" id="3_ffvvw"]
[ext_resource type="Script" path="res://Script/Component/PathfindComponent.gd" id="4_e4v6d"]
[ext_resource type="Script" path="res://Script/Component/HealthComponent.gd" id="5_bho0k"]
[ext_resource type="Script" path="res://Script/Component/HurtBoxComponent.gd" id="6_sc1tl"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="7_vsjil"]
[ext_resource type="Script" path="res://addons/beehave/blackboard.gd" id="8_6dat1"]
[ext_resource type="Script" path="res://Script/Beehave/Condition/IsPlayerInRange.gd" id="9_07cna"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector_reactive.gd" id="9_25vbi"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence_reactive.gd" id="10_xb1ga"]
[ext_resource type="Script" path="res://Script/Beehave/Condition/EnemyAttack.gd" id="12_smyub"]
[ext_resource type="Script" path="res://Script/Beehave/Condition/IsPlayerNotInRange.gd" id="13_mbbn3"]
[ext_resource type="Script" path="res://Script/Beehave/Condition/EnemyPatrol.gd" id="14_dl18r"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence_star.gd" id="14_p5kp7"]

[sub_resource type="Resource" id="Resource_j7sht"]
script = ExtResource("3_ffvvw")
hp = 100
max_hp = 100
mp = 0
speed = 2
damage = 1
atk_speed = 0
atk_range = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3mlrj"]
radius = 37.054

[sub_resource type="CircleShape2D" id="CircleShape2D_u6wmr"]
radius = 37.0135

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_jkjmt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_lm6s8")

[node name="FlowerBuffManager" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("2_jei58")
target = NodePath("..")
compute_data = SubResource("Resource_j7sht")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3mlrj")

[node name="PathFindComponent" type="Node" parent="."]
script = ExtResource("4_e4v6d")

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("buff_manager")]
script = ExtResource("5_bho0k")
buff_manager = NodePath("../FlowerBuffManager")

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("6_sc1tl")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_u6wmr")

[node name="BeehaveTree" type="Node" parent="." node_paths=PackedStringArray("blackboard")]
script = ExtResource("7_vsjil")
actor_node_path = NodePath("..")
blackboard = NodePath("../Blackboard")

[node name="SelectorReactiveComposite" type="Node" parent="BeehaveTree"]
script = ExtResource("9_25vbi")

[node name="Attack" type="Node" parent="BeehaveTree/SelectorReactiveComposite"]
script = ExtResource("10_xb1ga")

[node name="IsPlayerInRange" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Attack"]
script = ExtResource("9_07cna")

[node name="EnemyAttack" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Attack"]
script = ExtResource("12_smyub")

[node name="Patrol" type="Node" parent="BeehaveTree/SelectorReactiveComposite"]
script = ExtResource("14_p5kp7")

[node name="IsPlayerNotInRange" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Patrol"]
script = ExtResource("13_mbbn3")

[node name="EnemyPatrol" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Patrol"]
script = ExtResource("14_dl18r")

[node name="Blackboard" type="Node" parent="."]
script = ExtResource("8_6dat1")
